syntax = "proto3";
package rider;
option go_package = "/riderservice/genproto";

service RiderService {
    rpc CreateRider(CreateRiderRequest) returns (CreateRiderResponse);
    rpc GetRider(GetRiderRequest) returns (GetRiderResponse);
    rpc UpdateRider(UpdateRiderRequest) returns (UpdateRiderResponse);
    rpc DeleteRider(DeleteRiderRequest) returns (DeleteRiderResponse);
}

message Rider {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string phone = 4;
    string email = 5;
    bool is_verified = 6;
    map<string, Location> saved_locations = 7;
}

message Location {
    string name = 1;
    double latitude = 2;
    double longitude = 3;
}

message CreateRiderRequest {
    string phone = 1;
}

message CreateRiderResponse {
    Rider created_rider = 1;
}

message GetRiderRequest {
    string id = 1;
}

message GetRiderResponse {
    Rider rider = 1;
}

message UpdateRiderRequest {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string phone = 4;
    string email = 5;
    map<string, Location> saved_locations = 6;
}

message UpdateRiderResponse {
    Rider updated_rider = 1;
}

message DeleteRiderRequest {
    string id = 1;
}

message DeleteRiderResponse {
    string message = 1;
}